--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
-  "name": "spa-heroes2",
-  "homepage": "https://joalbertg.github.io/react-spa_heroes_app/",
+  "name": "spa-heroes",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -18,7 +17,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
