--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "spa-heroes",
+  "homepage": "https://joalbertg.github.io/react-spa_heroes_app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
